Fix welcome message / header on mobile

--- a/nycommons/static/css/header.less
+++ b/nycommons/static/css/header.less
@@ -55,7 +55,7 @@
             }
         }
 
-        .mobile-map-header-content-default {
+        .map-page & .mobile-map-header-content-default {
             background-color: white;
             display: block;
             padding: 5px;
