--- a/nycommons/static/css/lot_detail.less
+++ b/nycommons/static/css/lot_detail.less
@@ -10,6 +10,10 @@
 .lot-detail {
     &-page .page-wrapper {
         margin: 50px;
+
+        @media (max-width: @screen-xs-max) {
+            margin: 0;
+        }
     }
 
     &-page h1 {
