--- a/nycommons/static/css/nav.less
+++ b/nycommons/static/css/nav.less
@@ -63,7 +63,7 @@
 // Smallest screens, use grid to keep logo and collapse button side-by-side
 @media (max-width: @screen-xs-max) {
     .navbar {
-        background-color: white;
+        border: 0;
         margin-bottom: 0;
         position: fixed;
         top: 0;
@@ -75,7 +75,8 @@
     }
 
     .navbar-collapse {
-        margin-top: 80px;
+        background-color: white;
+        margin-top: 75px;
     }
 
     .navbar-header {
